# knot

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  deploy-demo.yml  publish.yml
crates/knot-bindings/: Cargo.toml
crates/knot-bindings/src/: lib.rs
crates/knot-core/: Cargo.toml
crates/knot-core/src/: bbox.rs  bvh.rs  error.rs  exact.rs  id.rs  interval.rs  lib.rs  scalar.rs  serde_arc.rs  snap.rs
crates/knot-core/tests/: bbox.rs  exact.rs  exact_predicates.rs  interval.rs  snap.rs  snap_merge.rs
crates/knot-geom/: Cargo.toml
crates/knot-geom/src/: frame.rs  lib.rs  point.rs  transform.rs
crates/knot-geom/src/curve/: arc.rs  fit.rs  line.rs  mod.rs  nurbs.rs  offset.rs
crates/knot-geom/src/surface/: cone.rs  cylinder.rs  fit.rs  mod.rs  nurbs.rs  plane.rs  sphere.rs  torus.rs
crates/knot-geom/tests/: curve_fit.rs  line_arc.rs  nurbs_curve.rs  offset.rs  surface_fit.rs  surfaces.rs
crates/knot-intersect/: Cargo.toml
crates/knot-intersect/src/: curve_curve.rs  curve_surface.rs  lib.rs  surface_surface.rs
crates/knot-intersect/src/algebraic/: analytic_subst.rs  bernstein.rs  branch_topology.rs  cone_torus.rs  cylinder_torus.rs  discriminant.rs  mod.rs  nurbs_analytic.rs  nurbs_bridge.rs  nurbs_nurbs.rs  poly.rs  quartic.rs  univariate.rs
crates/knot-intersect/tests/: curve_curve.rs  curve_surface.rs  ssi_adversarial.rs  surface_surface.rs
crates/knot-io/: Cargo.toml
crates/knot-io/src/: cbor.rs  gltf.rs  lib.rs  stl.rs
crates/knot-io/src/step/: mod.rs  parser.rs  reader.rs  writer.rs
crates/knot-io/tests/: abc_diagnose.rs  abc_euler_debug.rs  abc_euler_debug2.rs  abc_failure_diag.rs  abc_filter_diag.rs  abc_hang_diag.rs  abc_harness.rs  abc_import_audit.rs  abc_pair_diag.rs  abc_ssi_oracle.rs  abc_stage_trace.rs  abc_topo7.rs  abc_validation_diag.rs  cbor_roundtrip.rs  cbor_variants.rs  edge_curve_diag.rs  export.rs  step_entities.rs  step_export_analytical.rs  step_import.rs
crates/knot-ops/: Cargo.toml
crates/knot-ops/src/: boolean.rs  extrude.rs  fillet.rs  history.rs  lib.rs  loft.rs  primitives.rs  sweep.rs  topo_builder.rs  transform.rs
crates/knot-ops/tests/: boolean.rs  boolean_curved.rs  feature_ops.rs  fillet.rs  intersection_trace.rs  loft.rs  primitives.rs  reliability.rs  reliability_debug.rs  sweep.rs  transform.rs
crates/knot-tessellate/: Cargo.toml
crates/knot-tessellate/src/: lib.rs
crates/knot-tessellate/tests/: tessellation.rs
crates/knot-topo/: Cargo.toml
crates/knot-topo/src/: brep.rs  edge.rs  face.rs  lib.rs  loop_.rs  shell.rs  solid.rs  validate.rs  vertex.rs
crates/knot-topo/tests/: topology.rs  validation.rs
docs/: PIPELINE.md
examples/graph-editor/: index.html  package.json  tsconfig.json  vite.config.ts
examples/graph-editor/src/: App.tsx  CadNode.tsx  examples.ts  main.tsx  port-colors.ts
examples/react-demo/: index.html  package.json  vite.config.ts
examples/react-demo/src/: App.tsx  Sidebar.tsx  main.tsx
js/: README.md  package.json  tsconfig.json  tsup.config.ts
js/src/: curve.test.ts  error.e2e.test.ts  error.test.ts  error.ts  index.ts  kernel.ts
js/src/graph/: analysis.test.ts  evaluator.test.ts  evaluator.ts  fit.test.ts  form.test.ts  form.ts  graph.test.ts  graph.ts  index.ts  loft.test.ts  logic.test.ts  m0-smoke.test.ts  m1-sweep.test.ts  modify.test.ts  offset.test.ts  owned.ts  serialize.test.ts  types.ts
js/src/graph/nodes/: analysis.ts  boolean.ts  box.ts  curve.ts  define.ts  fit.ts  geometry.ts  index.ts  list.ts  (+11 more)
js/src/math/: index.ts  line.test.ts  line.ts  plane.test.ts  plane.ts  transform.test.ts  transform.ts  vec3.test.ts  vec3.ts
js/src/react/: form-view.tsx  index.ts  knot-mesh.tsx  use-brep.ts  use-knot.ts
scripts/: fetch_abc_chunk.sh  fix-pkg-name.mjs  wasm-readme.md
src/: lib.rs  main.rs
tests/: wasm_boolean.rs
web/: index.html
