[workspace]
resolver = "3"
members = [
    "crates/knot-core",
    "crates/knot-geom",
    "crates/knot-topo",
    "crates/knot-intersect",
    "crates/knot-ops",
    "crates/knot-tessellate",
    "crates/knot-io",
    "crates/knot-bindings",
]

[workspace.dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive", "rc"] }
malachite-q = "0.4"
malachite-nz = "0.4"
wasm-bindgen = "0.2"
ciborium = "0.2"
thiserror = "2"

[package]
name = "knot"
version = "0.1.0"
edition = "2024"
description = "A NURBS-based CAD kernel"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "knot"
path = "src/main.rs"

[dependencies]
knot-core = { path = "crates/knot-core" }
knot-geom = { path = "crates/knot-geom" }
knot-topo = { path = "crates/knot-topo" }
knot-intersect = { path = "crates/knot-intersect" }
knot-ops = { path = "crates/knot-ops" }
knot-tessellate = { path = "crates/knot-tessellate" }
knot-bindings = { path = "crates/knot-bindings" }
knot-io = { path = "crates/knot-io", optional = true }
wasm-bindgen = { workspace = true }

[features]
default = []
io = ["dep:knot-io"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
