[package]
name = "knot-bindings"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for the Knot CAD kernel"

[dependencies]
knot-core = { path = "../knot-core" }
knot-geom = { path = "../knot-geom" }
knot-topo = { path = "../knot-topo" }
knot-ops = { path = "../knot-ops" }
knot-tessellate = { path = "../knot-tessellate" }
knot-io = { path = "../knot-io" }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = "0.6"
serde = { workspace = true }
js-sys = "0.3"
