[package]
name = "knot-io"
version = "0.1.0"
edition = "2024"
description = "Import/export for the Knot CAD kernel"

[dependencies]
knot-core = { path = "../knot-core" }
knot-geom = { path = "../knot-geom" }
knot-topo = { path = "../knot-topo" }
knot-tessellate = { path = "../knot-tessellate" }
serde = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
knot-intersect = { path = "../knot-intersect" }
knot-ops = { path = "../knot-ops" }
